Fix: Scrollbar color. Feature: 500x500px min window width.

--- a/web/_.html
+++ b/web/_.html
@@ -33,6 +33,14 @@
             scrollbar-color: #b5958c #16213e;
             user-select: none;
         }
+        
+        *::-webkit-scrollbar-thumb {
+            background-color: #b5958c;
+        }
+        
+        *::-webkit-scrollbar {
+            width: 10px;
+        }
 
         .container {
             width: 100%;
